tests/paczka1/fuzzy1/76401527.err
Error in line 10: KFjCHav S661 75,7
Error in line 27: ZITNhG S661 99,8
Error in line 17: KFjCHav S661 46,1
